package estructural.composite.v1;

public interface CuentaComponent {
  void showAccountName();
  Double getAmount();

}
